<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/item_favorite"
        android:title="@string/item_favorite"
        android:orderInCategory="10"
        android:showAsAction="never"/>

    <item android:id="@+id/item_categories"
        android:title="@string/item_categories"
        android:orderInCategory="20"
        android:showAsAction="never"/>

    <item android:id="@+id/item_update"
        android:title="@string/item_update"
        android:orderInCategory="30"
        android:showAsAction="never" />

    <item android:id="@+id/item_about"
        android:title="@string/item_about"
        android:orderInCategory="40"
        android:showAsAction="never" />

    <item android:id="@+id/item_share"
        android:title="@string/item_share"
        android:orderInCategory="50"
        android:showAsAction="never" />

    <item android:id="@+id/item_exit"
        android:showAsAction="never"
        android:title="@string/item_exit"
        android:orderInCategory="60"/>

</menu>
